// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiButton Baseline HTML attributes are rendered 1`] = `
<button
  aria-label="aria label"
  class="kuiButton testClass1 testClass2"
  data-test-subj="test subject string"
  disabled=""
  type="submit"
>
  <span
    class="kuiButton__inner"
  />
</button>
`;

exports[`KuiButton Baseline is rendered 1`] = `
<button
  class="kuiButton"
>
  <span
    class="kuiButton__inner"
  />
</button>
`;

exports[`KuiButton Props buttonType basic renders the basic class 1`] = `
<button
  class="kuiButton kuiButton--basic"
>
  <span
    class="kuiButton__inner"
  />
</button>
`;

exports[`KuiButton Props buttonType danger renders the danger class 1`] = `
<button
  class="kuiButton kuiButton--danger"
>
  <span
    class="kuiButton__inner"
  />
</button>
`;

exports[`KuiButton Props buttonType hollow renders the hollow class 1`] = `
<button
  class="kuiButton kuiButton--hollow"
>
  <span
    class="kuiButton__inner"
  />
</button>
`;

exports[`KuiButton Props buttonType primary renders the primary class 1`] = `
<button
  class="kuiButton kuiButton--primary"
>
  <span
    class="kuiButton__inner"
  />
</button>
`;

exports[`KuiButton Props buttonType warning renders the warning class 1`] = `
<button
  class="kuiButton kuiButton--warning"
>
  <span
    class="kuiButton__inner"
  />
</button>
`;

exports[`KuiButton Props children is rendered 1`] = `
<button
  class="kuiButton"
>
  <span
    class="kuiButton__inner"
  >
    <span>
      Hello
    </span>
  </span>
</button>
`;

exports[`KuiButton Props icon is rendered with children 1`] = `
<button
  class="kuiButton kuiButton--iconText"
>
  <span
    class="kuiButton__inner"
  >
    Icon
    <span>
      Hello
    </span>
  </span>
</button>
`;

exports[`KuiButton Props icon is rendered without children 1`] = `
<button
  class="kuiButton kuiButton--iconText"
>
  <span
    class="kuiButton__inner"
  >
    Icon
  </span>
</button>
`;

exports[`KuiButton Props iconPosition moves the icon to the right 1`] = `
<button
  class="kuiButton kuiButton--iconText"
>
  <span
    class="kuiButton__inner"
  >
    <span>
      Hello
    </span>
    Icon
  </span>
</button>
`;

exports[`KuiButton Props isLoading doesn't render the icon prop 1`] = `
<button
  class="kuiButton kuiButton--iconText"
>
  <span
    class="kuiButton__inner"
  >
    <span
      aria-hidden="true"
      class="kuiButton__icon kuiIcon fa-spinner fa-spin"
    />
  </span>
</button>
`;

exports[`KuiButton Props isLoading renders a spinner 1`] = `
<button
  class="kuiButton kuiButton--iconText"
>
  <span
    class="kuiButton__inner"
  >
    <span
      aria-hidden="true"
      class="kuiButton__icon kuiIcon fa-spinner fa-spin"
    />
  </span>
</button>
`;
